# crew-ai-crash-course

./: .env.example  agents.py  main.py  pyproject.toml
